--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,10 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
-django = "^5.0.7"
 psycopg2 = "^2.9.9"
 python-dotenv = "^1.0.1"
+django-bootstrap-v5 = "^1.0.11"
+django = "4.0"
 
 
 [build-system]
