--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,11 @@ psycopg2 = "^2.9.9"
 python-dotenv = "^1.0.1"
 django-bootstrap-v5 = "^1.0.11"
 django = "4.0"
+django-select2 = "^8.2.0"
+requests = "^2.32.3"
+openmeteo-requests = "^1.2.0"
+requests-cache = "^1.2.1"
+retry-requests = "^2.0.0"
 
 
 [build-system]
