add utils for getting weather forecast

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ requests = "^2.32.3"
 openmeteo-requests = "^1.2.0"
 requests-cache = "^1.2.1"
 retry-requests = "^2.0.0"
+numpy = "^2.0.0"
+pandas = "^2.2.2"
 
 
 [build-system]
